# agglayer

./: .blast-radius.yaml  .clippy.toml  .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.ci.toml  Makefile.contracts.toml  Makefile.e2e.toml  Makefile.pp.toml  Makefile.proto.toml  Makefile.toml  README.md  RELEASE.md  SECURITY.md  agglayer-prover-mock.toml  agglayer-prover.toml  agglayer.toml  buf.agglayer-prover.gen.yaml  buf.rust.gen.yaml  buf.storage.gen.yaml  buf.yaml  build.rs  cliff.toml  codecov.yml  rustfmt.toml  skills-lock.json  sonar-project.properties  typos.toml  wrangler.toml.template
crates/agglayer/: Cargo.toml  README.md  build.rs
crates/agglayer-aggregator-notifier/: Cargo.toml
crates/agglayer-aggregator-notifier/src/: error.rs  lib.rs  proof.rs  testutils.rs
crates/agglayer-certificate-orchestrator/: Cargo.toml
crates/agglayer-certificate-orchestrator/src/: certificate_task.rs  certifier.rs  epoch_packer.rs  error.rs  finalization_task.rs  lib.rs  listener_task.rs  network_task.rs  settlement_client.rs  submitter.rs  tests.rs
crates/agglayer-clock/: Cargo.toml  README.md
crates/agglayer-clock/src/: block.rs  lib.rs  time.rs
crates/agglayer-config/: Cargo.toml
crates/agglayer-config/src/: auth.rs  certificate_orchestrator.rs  epoch.rs  error.rs  eth_tx_manager.rs  grpc.rs  l1.rs  l2.rs  lib.rs  local.rs  log.rs  multiplier.rs  outbound.rs  port.rs  private_networks.rs  proof_signers.rs  prover.rs  proxied_networks.rs  rate_limiting.rs  rpc.rs  settlement_service.rs  shutdown.rs  signer.rs  storage.rs  telemetry.rs  tls.rs  tracing.rs
crates/agglayer-config/tests/: auth_config.rs  backup.rs  backward_compatibility-kurtosis.toml  backward_compatibility.rs  backward_compatibility.toml  bare_filename_config.rs  bare_filename_config.toml  outbound.rs  settlement_service.rs  tls.rs  validate_deserialize.rs
crates/agglayer-contracts/: Cargo.toml  build.rs
crates/agglayer-contracts/src/: aggchain.rs  block_pinning.rs  contracts.rs  lib.rs  mocks.rs  nonce_manager.rs  polygon_rollup_manager.rs  polygon_zkevm_global_exit_root_v2.rs  polygonrollupmanager.json  polygonzkevmglobalexitrootv2.json  rollup.rs  settler.rs
crates/agglayer-gcp-kms/: Cargo.toml
crates/agglayer-gcp-kms/src/: config.rs  error.rs  lib.rs  params.rs  signer.rs
crates/agglayer-grpc-api/: Cargo.toml
crates/agglayer-grpc-api/src/: certificate_submission_service.rs  configuration_service.rs  lib.rs  network_state_service.rs  node_state_service.rs
crates/agglayer-grpc-types/: Cargo.toml
crates/agglayer-grpc-types/src/: compat.rs  lib.rs
crates/agglayer-jsonrpc-api/: Cargo.toml
crates/agglayer-jsonrpc-api/src/: admin.rs  error.rs  lib.rs  settlement_admin.rs  signed_tx.rs  tests.rs  testutils.rs  zkevm_node_client.rs
crates/agglayer-node/: Cargo.toml  build.rs
crates/agglayer-node/src/: epoch_synchronizer.rs  l1_tracing.rs  lib.rs  logging.rs  metrics.rs  node.rs  runtime_monitor.rs  signed_tx.rs  telemetry.rs  url_redact.rs  utils.rs  zkevm_node_client.rs
crates/agglayer-node/tests/: pushing_certificate.rs
crates/agglayer-primitives/: Cargo.toml
crates/agglayer-primitives/src/: lib.rs  signature.rs
crates/agglayer-prover/: Cargo.toml
crates/agglayer-prover-types/: Cargo.toml  build.rs
crates/agglayer-prover-types/src/: lib.rs
crates/agglayer-prover/src/: executor.rs  fake.rs  lib.rs  prover.rs  rpc.rs
crates/agglayer-rate-limiting/: Cargo.toml
crates/agglayer-rate-limiting/src/: lib.rs  tests.rs
crates/agglayer-rpc/: Cargo.toml
crates/agglayer-rpc/src/: error.rs  lib.rs  network_info.rs  network_state.rs
crates/agglayer-settlement-service/: Cargo.toml
crates/agglayer-settlement-service/src/: error.rs  helpers.rs  lib.rs  nonce_allocator.rs  settlement_service.rs  settlement_service_trait.rs  settlement_task.rs  utils.rs  wallet_nonce_locks.rs
crates/agglayer-settlement-service/tests/: utils.rs
crates/agglayer-signer/: Cargo.toml  README.md
crates/agglayer-signer/src/: error.rs  lib.rs  tests.rs
crates/agglayer-sp1/: Cargo.toml
crates/agglayer-sp1/src/: error.rs  ext.rs  lib.rs  mode.rs  policy.rs  testutils.rs  version.rs
crates/agglayer-sp1/tests/: empty.elf  empty_v5.elf  mode.rs  policy.rs  version.rs
crates/agglayer-storage/: Cargo.toml  MIGRATION.md
crates/agglayer-storage/benches/: README_settlement_latest_attempt.md  extract_settlement_latest_attempt_results.py  last_certificate_bench.rs  latest_certificate_bench.rs  plot_settlement_latest_attempt.py  settlement_latest_attempt_bench.rs  settlement_latest_attempt_results_template.csv
crates/agglayer-storage/examples/: sample-storage-for-tests.rs
crates/agglayer-storage/src/: diagnostics.rs  error.rs  lib.rs  migrate.rs  tests.rs  types.rs
crates/agglayer-storage/test_vectors/: balance_tree_test_vector.json  nullifier_tree_test_vector.json
crates/agglayer-telemetry/: Cargo.toml
crates/agglayer-telemetry/src/: certificate.rs  clock.rs  config.rs  constant.rs  error.rs  lib.rs  log.rs  network.rs  runtime.rs  settlement.rs  settlement_storage.rs  stage.rs  storage.rs  testutils.rs  traces.rs
crates/agglayer-telemetry/tests/: certificate_exposition.rs
crates/agglayer-test-suite/: Cargo.toml
crates/agglayer-test-suite/src/: lib.rs  storage.rs
crates/agglayer-transaction-monitor/: Cargo.toml
crates/agglayer-transaction-monitor/src/: lib.rs  tests.rs
crates/agglayer-types/: Cargo.toml
crates/agglayer-types/benches/: criterion.rs
crates/agglayer-types/src/: aggchain_proof.rs  compat.rs  epoch.rs  error.rs  hash.rs  lib.rs  local_network_state.rs  network_info.rs  network_status.rs  proof_modes.rs  rpc_error_code.rs  settlement.rs  settlement_tx_record.rs
crates/agglayer/src/: cli.rs  doctor_report.rs  main.rs  migrate_report.rs  (+1 more)
crates/aggregation-proof-program/: Cargo.toml
crates/pessimistic-proof-aggregation-program/: Cargo.toml
crates/pessimistic-proof-client/: Cargo.toml
crates/pessimistic-proof-core/: Cargo.toml  build.rs
crates/pessimistic-proof-program/: Cargo.toml
(+1130 files in other folders)
