[workspace]
resolver = "2"
default-members = ["crates/agglayer"]
members = ["crates/*", "tests/integrations"]
exclude = [
    "crates/pessimistic-proof-program",
    "crates/pessimistic-proof-test-suite/aggchain-proof-ecdsa-example/program/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
    'cfg(fuzzing)',
] }

[workspace.dependencies]
# Intra-repo dependencies
agglayer-aggregator-notifier = { path = "crates/agglayer-aggregator-notifier" }
agglayer-certificate-orchestrator = { path = "crates/agglayer-certificate-orchestrator" }
agglayer-clock = { path = "crates/agglayer-clock" }
agglayer-config = { path = "crates/agglayer-config" }
agglayer-contracts = { path = "crates/agglayer-contracts" }
agglayer-grpc-api = { path = "crates/agglayer-grpc-api" }
agglayer-grpc-client = { path = "crates/agglayer-grpc-client" }
agglayer-grpc-server = { path = "crates/agglayer-grpc-server" }
agglayer-grpc-types = { path = "crates/agglayer-grpc-types" }
agglayer-jsonrpc-api = { path = "crates/agglayer-jsonrpc-api" }
agglayer-node = { path = "crates/agglayer-node" }
agglayer-rate-limiting = { path = "crates/agglayer-rate-limiting" }
agglayer-rpc = { path = "crates/agglayer-rpc" }
agglayer-signer = { path = "crates/agglayer-signer" }
agglayer-storage = { path = "crates/agglayer-storage" }
agglayer-telemetry = { path = "crates/agglayer-telemetry" }
agglayer-types = { path = "crates/agglayer-types" }
agglayer-utils = { path = "crates/agglayer-utils" }
agglayer-test-suite = { path = "crates/agglayer-test-suite" }
pessimistic-proof = { path = "crates/pessimistic-proof" }
pessimistic-proof-core = { path = "crates/pessimistic-proof-core" }
pessimistic-proof-test-suite = { path = "crates/pessimistic-proof-test-suite" }

# Interop
# agglayer-bincode = "0.8.0"
# agglayer-interop = "0.8.0"
# agglayer-interop-types = "0.8.0"
# agglayer-primitives = "0.8.0"
# agglayer-tries = "0.8.0"
# unified-bridge = "0.8.0"

agglayer-bincode = { path = "../interop/crates/agglayer-bincode" }
agglayer-interop = { path = "../interop/crates/agglayer-interop" }
agglayer-interop-types = { path = "../interop/crates/agglayer-interop-types" }
agglayer-primitives = { path = "../interop/crates/agglayer-primitives" }
agglayer-tries = { path = "../interop/crates/agglayer-tries" }
unified-bridge = { path = "../interop/crates/unified-bridge" }

# Provers
agglayer-prover = { git = "https://github.com/agglayer/provers.git", tag = "v1.2.0" }
agglayer-prover-config = { git = "https://github.com/agglayer/provers.git", tag = "v1.2.0" }
agglayer-prover-types = { git = "https://github.com/agglayer/provers.git", tag = "v1.2.0" }
prover-config = { git = "https://github.com/agglayer/provers.git", tag = "v1.2.0" }

# SP1 dependencies
# Note: Whenever these are updated, also consider updating the SP1 toolchain docker image version.
#       It is specified at the top of scripts/make/Makefile.pp.toml.
sp1-core-machine = "=5.0.0"
sp1-sdk = { version = "=5.0.3", features = ["profiling"] }
sp1-primitives = "=5.0.0"
sp1-prover = "=5.0.1"
sp1-zkvm = { version = "=5.0.0", default-features = false }

# Core dependencies
alloy = { version = "0.14.0", features = ["full"] }
alloy-primitives = { version = "1.2", features = ["serde", "k256"] }
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
arc-swap = "1.7"
async-trait = "0.1.86"
axum = "0.8.1"
base64 = "0.22.0"
bytecheck = "0.8.1"
bolero = { version = "0.13.0", features = ["arbitrary"] }
buildstructor = "0.5.4"
clap = { version = "4.5", features = ["derive", "env"] }
derive_more = "2.0"
dirs = "5.0"
dotenvy = "0.15.7"
ethers = "2.0"
ethers-gcp-kms-signer = "0.1.5"
ethers-signers = "2.0"
fail = { version = "0.5.1", default-features = false }
futures = "0.3.31"
hex = "0.4.3"
http = "1.2"
hyper = "1.6"
insta = { git = "https://github.com/freyskeyd/insta", branch = "chore/updating-deps-to-avoid-serialize-error", features = [
    "toml",
    "yaml",
    "json",
] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
lazy_static = "1.5"
mockall = "0.13.1"
parking_lot = "0.12.3"
pin-project = "1.1"
prost = "0.13.4"
rand = "0.9.0"
rkyv = { version = "0.8", features = [
    "hashbrown-0_15",
    "std",
    "bytecheck",
    "unaligned",
] }
rstest = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12"
serde-reflection = "0.5"
test-log = { version = "0.2.16", features = ["trace"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
toml = "0.8.20"
tonic = { version = "0.12.3", default-features = false }
tonic-types = "0.12.3"
tower = "0.4.13"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
