[workspace]
resolver = "2"
default-members = ["crates/agglayer"]
members = ["crates/*", "tests/integrations"]
exclude = [
    "crates/pessimistic-proof-program",
    "crates/pessimistic-proof-test-suite/aggchain-proof-ecdsa-example/program/",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("cargo-clippy"))',
    'cfg(fuzzing)',
] }

[workspace.dependencies]
# Intra-repo dependencies
agglayer-aggregator-notifier = { path = "crates/agglayer-aggregator-notifier" }
agglayer-certificate-orchestrator = { path = "crates/agglayer-certificate-orchestrator" }
agglayer-clock = { path = "crates/agglayer-clock" }
agglayer-config = { path = "crates/agglayer-config" }
agglayer-contracts = { path = "crates/agglayer-contracts" }
agglayer-grpc-api = { path = "crates/agglayer-grpc-api" }
agglayer-grpc-client = { path = "crates/agglayer-grpc-client" }
agglayer-grpc-server = { path = "crates/agglayer-grpc-server" }
agglayer-grpc-types = { path = "crates/agglayer-grpc-types" }
agglayer-jsonrpc-api = { path = "crates/agglayer-jsonrpc-api" }
agglayer-node = { path = "crates/agglayer-node" }
agglayer-rate-limiting = { path = "crates/agglayer-rate-limiting" }
agglayer-rpc = { path = "crates/agglayer-rpc" }
agglayer-settlement-service = { path = "crates/agglayer-settlement-service" }
agglayer-signer = { path = "crates/agglayer-signer" }
agglayer-sp1 = { path = "crates/agglayer-sp1" }
agglayer-storage = { path = "crates/agglayer-storage" }
agglayer-storage-types = { path = "crates/agglayer-storage-types" }
agglayer-telemetry = { path = "crates/agglayer-telemetry" }
agglayer-types = { path = "crates/agglayer-types" }
agglayer-utils = { path = "crates/agglayer-utils" }
agglayer-test-suite = { path = "crates/agglayer-test-suite" }
pessimistic-proof = { path = "crates/pessimistic-proof" }
pessimistic-proof-core = { path = "crates/pessimistic-proof-core" }
pessimistic-proof-test-suite = { path = "crates/pessimistic-proof-test-suite" }

# Interop
agglayer-errors = "0.18.0"
agglayer-bincode = "0.18.0"
agglayer-interop = "0.18.0"
agglayer-interop-types = "0.18.0"
agglayer-elf-build = "0.18.0"
agglayer-primitives = "0.18.0"
agglayer-tries = "0.18.0"
unified-bridge = "0.18.0"

# Provers
prover-alloy = { git = "https://github.com/agglayer/provers.git", tag = "v2.0.0-rc.6" }
prover-config = { git = "https://github.com/agglayer/provers.git", tag = "v2.0.0-rc.6" }
prover-logger = { git = "https://github.com/agglayer/provers.git", tag = "v2.0.0-rc.6" }
prover-executor = { git = "https://github.com/agglayer/provers.git", tag = "v2.0.0-rc.6" }
prover-engine = { git = "https://github.com/agglayer/provers.git", tag = "v2.0.0-rc.6" }

# SP1 dependencies
# Note: Whenever these are updated, also consider updating the SP1 toolchain docker image version.
#       It is specified at the top of scripts/make/Makefile.pp.toml.
sp1-core-machine = "=6.2.2"
sp1-core-executor = "=6.2.2"
sp1-hypercube = "=6.2.2"
sp1-sdk = { version = "=6.2.2", features = ["blocking"] }
sp1-sdk-v5 = { package = "sp1-sdk", version = "=5.2.2" }
sp1-primitives = "=6.2.2"
sp1-prover = "=6.2.2"
sp1-zkvm = { version = "=6.2.2", default-features = false }

# Core dependencies
alloy = { version = "1.7.3", features = ["full", "json-rpc"] }
alloy-primitives = { version = "1.5.7", features = ["serde", "k256"] }
alloy-signer-local = { version = "1.7.3", features = ["keystore", "mnemonic"] }
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
arc-swap = "1.8"
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
bolero = { version = "0.13.4", features = ["arbitrary"] }
buildstructor = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
color-eyre = { version = "0.6.5" }
criterion = "0.8"
derive_more = "2.1"
dirs = "6.0"
dotenvy = "0.15.7"
educe = { version = "0.6", features = ["Debug", "Clone", "Eq", "Ord"] }
eyre = "0.6.12"
fail = { version = "0.5.1", default-features = false }
futures = "0.3.32"
futures-util = "0.3.32"
gcloud-sdk = { version = "0.29.0", default-features = false }
hex = "0.4.3"
http = "1.4"
hyper = "1.8"
insta = { git = "https://github.com/freyskeyd/insta", branch = "chore/updating-deps-to-avoid-serialize-error", features = [
    "toml",
    "yaml",
    "json",
    "redactions",
    "filters",
] }
jsonrpsee = { version = "0.24.7", features = ["full"] }
lazy_static = "1.5"
mockall = "0.14"
parking_lot = "0.12.5"
pbjson = "0.9.0"
pin-project = "1.1"
prost = "0.13.5"
prost-types = { version = "0.13.5" }
rand = "0.9.0"
reqwest = "0.12"
rstest = "0.26"
rustls = { version = "0.23.37", default-features = false, features = [
    "aws_lc_rs",
    "std",
] }
serial_test = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.17"
serde-reflection = "0.5"
strum = "0.28"
strum_macros = "0.28"
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.18"
toml = "1.0"
tonic = { version = "0.13.1", default-features = false }
tonic-health = "0.13.1"
tonic-reflection = "0.13.1"
tonic-types = "0.13.1"
tower = "0.4.13"
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = { version = "1.2", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
