[package]
name = "agglayer-aggregator-notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
bincode.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
agglayer-certificate-orchestrator = { path = "../agglayer-certificate-orchestrator" }
agglayer-config = { path = "../agglayer-config" }
agglayer-storage = { path = "../agglayer-storage" }
agglayer-types = { path = "../agglayer-types" }
agglayer-prover-types = { path = "../agglayer-prover-types" }
pessimistic-proof = { path = "../pessimistic-proof" }
tonic = { workspace = true }

sp1-sdk.workspace = true
sp1-prover.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
coverage = []
sp1 = []
testutils = []
