[package]
name = "agglayer-aggregator-notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
bincode.workspace = true
futures.workspace = true
fail.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
agglayer-certificate-orchestrator = { path = "../agglayer-certificate-orchestrator" }
agglayer-config = { path = "../agglayer-config" }
agglayer-contracts = { path = "../agglayer-contracts" }
agglayer-storage = { path = "../agglayer-storage" }
agglayer-types = { path = "../agglayer-types" }
agglayer-prover-types = { path = "../agglayer-prover-types" }
pessimistic-proof = { path = "../pessimistic-proof" }
tonic = { workspace = true, features = ["zstd"] }

sp1-sdk.workspace = true
sp1-prover.workspace = true

[dev-dependencies]
agglayer-prover = { path = "../agglayer-prover", features = ["testutils"] }
async-trait.workspace = true
ethers.workspace = true
fail = { workspace = true, features = ["failpoints"] }
mockall.workspace = true
pessimistic-proof-test-suite = { path = "../pessimistic-proof-test-suite" }
rstest.workspace = true
test-log.workspace = true
tokio-util.workspace = true

[features]
coverage = []
sp1 = []
testutils = []
