[package]
name = "agglayer-aggregator-notifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-certificate-orchestrator = { path = "../agglayer-certificate-orchestrator" }
agglayer-config = { path = "../agglayer-config" }
agglayer-contracts = { path = "../agglayer-contracts" }
agglayer-storage = { path = "../agglayer-storage" }
agglayer-types.workspace = true
pessimistic-proof = { path = "../pessimistic-proof" }

agglayer-prover-types.workspace = true
prover-config.workspace = true
agglayer-prover-config.workspace = true

anyhow.workspace = true
async-trait.workspace = true
arc-swap.workspace = true
bincode.workspace = true
ethers.workspace = true
fail.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["zstd"] }
tracing.workspace = true

sp1-sdk.workspace = true
sp1-prover.workspace = true

[dev-dependencies]
agglayer-prover = { workspace = true, features = ["testutils"] }
agglayer-storage = { path = "../agglayer-storage", features = ["testutils"] }
pessimistic-proof = { workspace = true, features = ["testutils"] }
pessimistic-proof-test-suite = { path = "../pessimistic-proof-test-suite" }

async-trait.workspace = true
ethers.workspace = true
fail = { workspace = true, features = ["failpoints"] }
mockall.workspace = true
rstest.workspace = true
test-log.workspace = true
tokio-util.workspace = true

[features]
coverage = []
sp1 = []
testutils = []
