[package]
name = "agglayer-certificate-orchestrator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
bincode.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

agglayer-clock = { path = "../agglayer-clock" }
agglayer-storage = { path = "../agglayer-storage" }
agglayer-types = { path = "../agglayer-types" }
pessimistic-proof = { path = "../pessimistic-proof" }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures-util = "0.3.30"

[dev-dependencies]
agglayer-clock = { path = "../agglayer-clock", features = ["testutils"] }
agglayer-storage = { path = "../agglayer-storage", features = ["testutils"] }
agglayer-config = { path = "../agglayer-config", features = ["testutils"] }
agglayer-types = { path = "../agglayer-types", features = ["testutils"] }
mockall.workspace = true
rstest.workspace = true
test-log.workspace = true
