[package]
name = "agglayer-certificate-orchestrator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
bincode.workspace = true
buildstructor.workspace = true
ethers.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures-util = "0.3.30"

agglayer-clock.workspace = true
agglayer-storage.workspace = true
agglayer-types.workspace = true
agglayer-prover-types.workspace = true
pessimistic-proof.workspace = true

# Optional dependencies
mockall = { workspace = true, optional = true }

[dev-dependencies]
agglayer-clock = { workspace = true, features = ["testutils"] }
agglayer-config = { workspace = true, features = ["testutils"] }
agglayer-storage = { workspace = true, features = ["testutils"] }
agglayer-test-suite = { path = "../agglayer-test-suite" }
agglayer-types = { workspace = true, features = ["testutils"] }
async-trait.workspace = true
ethers.workspace = true
lazy_static.workspace = true
mockall.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
test-log.workspace = true

[features]
default = []
testutils = ["dep:mockall"]
