[package]
name = "agglayer-certificate-orchestrator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []
testutils = [
    "dep:agglayer-test-suite",
    "dep:fail",
    "dep:mockall",
    "agglayer-clock/testutils",
    "agglayer-config/testutils",
    "agglayer-storage/testutils",
    "agglayer-types/testutils",
]

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
buildstructor.workspace = true
alloy.workspace = true
fail = { workspace = true, optional = true }
parking_lot.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
futures-util = "0.3.31"
reqwest.workspace = true
agglayer-clock.workspace = true
agglayer-config = { workspace = true, optional = true }
agglayer-contracts.workspace = true
agglayer-storage.workspace = true
agglayer-test-suite = { workspace = true, optional = true }
agglayer-types.workspace = true
pessimistic-proof.workspace = true

# Optional dependencies
mockall = { workspace = true, optional = true }

[dev-dependencies]
agglayer-certificate-orchestrator = { workspace = true, features = [
    "testutils",
] }

async-trait.workspace = true
alloy.workspace = true
lazy_static.workspace = true
mockall.workspace = true
rstest.workspace = true
serde.workspace = true
serde_json.workspace = true
test-log.workspace = true
