[package]
name = "agglayer-clock"
version.workspace = true
edition.workspace = true

[dependencies]
agglayer-types.workspace = true

alloy.workspace = true
async-trait.workspace = true
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fail.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-node-bindings = "0.14.0"
fail = { workspace = true, features = ["failpoints"] }
rstest.workspace = true
test-log.workspace = true

[features]
default = []
testutils = []
