[package]
name = "agglayer-clock"
version.workspace = true
edition.workspace = true

[dependencies]
agglayer-telemetry.workspace = true
agglayer-types.workspace = true

alloy = { workspace = true, features = ["node-bindings"] }
async-trait.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fail.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
agglayer-clock = { workspace = true, features = ["testutils"] }
rstest.workspace = true
test-log.workspace = true

[features]
default = []
testutils = ["fail/failpoints"]
