[package]
name = "agglayer-config"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
dirs.workspace = true
humantime-serde = "1.1.1"
jsonrpsee.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }


agglayer-primitives.workspace = true
agglayer-prover-config.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["toml", "redactions", "filters"] }
pretty_assertions = "1.4.0"
rstest.workspace = true
serde_json = { workspace = true }

[features]
default = []
testutils = []
