[package]
name = "agglayer-config"
version.workspace = true
edition.workspace = true

[dependencies]
dirs.workspace = true
alloy-primitives.workspace = true
educe.workspace = true
humantime-serde = "1.1.1"
jsonrpsee.workspace = true
rust_decimal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }

agglayer-primitives.workspace = true
agglayer-prover-config.workspace = true
agglayer-types.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions = "1.4.0"
rstest.workspace = true
serde_json = { workspace = true }

[features]
default = []
testutils = []
