[package]
name = "agglayer-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
async-trait.workspace = true
fail.workspace = true
hex.workspace = true
num-traits = "0.2"
num-derive = "0.4"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true

agglayer-primitives.workspace = true
prover-alloy.workspace = true

[features]
testutils = []
