[package]
name = "agglayer-gcp-kms"
version.workspace = true
edition.workspace = true

[dependencies]
alloy = {workspace = true, features = ["signers", "signer-local", "signer-gcp"]}
alloy-primitives.workspace = true
async-trait.workspace = true
eyre.workspace = true
gcloud-sdk.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

agglayer-config.workspace = true

[dev-dependencies]
serial_test = "3.2.0"
