[package]
name = "agglayer-grpc-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-config.workspace = true
agglayer-grpc-server.workspace = true
agglayer-grpc-types.workspace = true
agglayer-types.workspace = true

prost.workspace = true
tonic.workspace = true
tonic-types = "0.12.3"
tonic-reflection = "0.12.3"
tracing.workspace = true

[lints]
workspace = true
