[package]
name = "agglayer-grpc-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-config.workspace = true
agglayer-contracts.workspace = true
agglayer-grpc-server.workspace = true
agglayer-grpc-types = { workspace = true, features = ["compat"] }
agglayer-interop = { workspace = true, features = ["grpc"] }
agglayer-rpc.workspace = true
agglayer-storage.workspace = true
agglayer-types.workspace = true

axum = { workspace = true, features = ["tokio", "http1", "http2"] }
anyhow = { workspace = true }
alloy.workspace = true
http.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic = { workspace = true, features = ["zstd"] }
tonic-types.workspace = true
tonic-reflection = "0.12.3"
tower = { workspace = true }
tracing.workspace = true
uuid = { version = "1.15", features = ["v4"] }

[dev-dependencies]
agglayer-grpc-client.workspace = true
agglayer-storage = { workspace = true, features = ["testutils"] }

rstest.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
] }

[lints]
workspace = true
