[package]
name = "agglayer-grpc-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
compat = ["dep:agglayer-types", "dep:thiserror"]

[lints]
workspace = true

[dependencies]
agglayer-types = { workspace = true, optional = true }
agglayer-interop = { workspace = true, features = ["grpc-compat"] }

hex.workspace = true
pbjson = "0.8.0"
prost.workspace = true
serde.workspace = true
thiserror = { workspace = true, optional = true }

[dev-dependencies]
agglayer-types = { workspace = true, features = ["testutils"] }
agglayer-interop = { workspace = true, features = ["testutils"] }

bolero.workspace = true
eyre.workspace = true
insta.workspace = true
rstest.workspace = true
