[package]
name = "agglayer-jsonrpc-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-telemetry = { workspace = true }
agglayer-config.workspace = true
agglayer-rate-limiting.workspace = true
agglayer-types.workspace = true
agglayer-contracts.workspace = true

alloy = { workspace = true }
futures = { workspace = true }
ethers = { workspace = true, features = ["solc"] }
jsonrpsee = { workspace = true, features = ["full"] }
hex.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

anyhow.workspace = true
axum = { version = "0.8.3", features = ["tokio", "http1", "http2"] }
arc-swap.workspace = true
buildstructor.workspace = true
hyper.workspace = true
http.workspace = true
pin-project.workspace = true
reqwest = "0.12.15"
tokio-util.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tower-http = { version = "0.6.2", features = ["full"] }
tower.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

agglayer-aggregator-notifier.workspace = true
agglayer-certificate-orchestrator.workspace = true
agglayer-clock.workspace = true
agglayer-grpc-api.workspace = true
agglayer-grpc-types.workspace = true
agglayer-rpc.workspace = true
agglayer-signer.workspace = true
agglayer-storage.workspace = true
pessimistic-proof.workspace = true

rstest = { workspace = true, optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["full", "node-bindings"] }
ethers.workspace = true
http-body-util = "0.1.3"
hyper-util = { version = "0.1.10", features = ["client"] }
insta.workspace = true
fail = { workspace = true, features = ["failpoints"] }
jsonrpsee-test-utils = { git = "https://github.com/paritytech/jsonrpsee.git", tag = "v0.24.7" }
lazy_static.workspace = true
mockall.workspace = true
rand.workspace = true
rstest.workspace = true
serde_json.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-capture = "0.1.0"

agglayer-test-suite.workspace = true
agglayer-config = { workspace = true, features = ["testutils"] }
agglayer-prover = { workspace = true, features = ["testutils"] }
agglayer-storage = { workspace = true, features = ["testutils"] }
agglayer-types = { workspace = true, features = ["testutils"] }
pessimistic-proof-test-suite.workspace = true

[lints]
workspace = true

[features]
testutils = ["dep:rstest"]
