[package]
name = "agglayer-jsonrpc-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-telemetry = { workspace = true }
agglayer-config.workspace = true
agglayer-rate-limiting.workspace = true
agglayer-types.workspace = true

alloy = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
hex.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

anyhow.workspace = true
axum = { version = "0.8.1", features = ["tokio", "http1", "http2"] }
buildstructor.workspace = true
hyper.workspace = true
http.workspace = true
pin-project.workspace = true
reqwest = "0.12.12"
tokio-util.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tower-http = { version = "0.6.2", features = ["full"] }
tower.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

agglayer-contracts.workspace = true
agglayer-rpc.workspace = true
agglayer-storage.workspace = true

rstest = { workspace = true, optional = true }

[dev-dependencies]
alloy = { workspace = true, features = ["full", "node-bindings"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["client"] }
insta.workspace = true
fail = { workspace = true, features = ["failpoints"] }
jsonrpsee-test-utils = { git = "https://github.com/paritytech/jsonrpsee.git", tag = "v0.24.9" }
lazy_static.workspace = true
mockall.workspace = true
rand.workspace = true
rstest.workspace = true
serde_json.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-capture = "0.1.0"

agglayer-config = { workspace = true, features = ["testutils"] }
agglayer-storage = { workspace = true, features = ["testutils"] }
agglayer-types = { workspace = true, features = ["testutils"] }

[lints]
workspace = true

[features]
testutils = ["dep:rstest"]
